--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
+    <div class="navbar">
+      <h1>Broadway Design</h1>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="main">
+      <h2>Our Process</h2>
+      <img src="resources/icons/identify.svg" alt="curly arrow">
+      <h3>Identify</h3>
+      <p>We focus on the most important details</p>
+      <img src="resources/icons/understand.svg" alt="cyrcle arrow">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out</p>
+      <img src="resources/icons/execute.svg" alt="fat arrow">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work</p>
+    </div>
+
+    <div class="middle-title">
+      <h3>Designed in New York</h3>
+    </div>
+
+    <div class="about">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <div class="footer">
+      <p>@copy Broadway 2016</p>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
 
   </body>
 </html>
